* Change: Monkey-Patched FileUtils::sh on JRuby to use POSIX `system`
* Added:  BUILDR-56 Download Scala artifacts if not available locally
* Added:  Mandriva (urpmi) installation support (with help from Franck Villaume).
* Added:  BUILDR-163 cobertura:check (Marko Sibakov, Daniel Spiewak).
* Change: Updated to Rake 0.8.7, RSpec 1.2.6 and JRuby-openssl 0.5.1.

1.3.4 (2009-04-21)
* Added:  BUILDR-93 Add specs for ScalaCheck integration
* Added:  BUILDR-94 Add specs for Scala Specs integration
* Added:  BUILDR-136 Support Scala/Java Joint Compiler (Daniel Spiewak).
* Added:  BUILDR-159 Improved 'check' to accept both tar and tgz archives.
* Added:  BUILDR-164 New 'artifacts:sources' task to download source code
          for artifact jars.
* Added:  BUILDR-222 Support Git as a version control system
* Added   BUILDR-223 Release Task: customizable commit message
* Added:  BUILDR-242 Include Scala-Tools Repository by Default.  
* Added:  BUILDR-268 Allow proxying for https connections (Joel Muzzerall).
* Added:  Info message "Packaging filename.ext" now displayed for packaging tasks
* Added:  Added Scala.version and Scala.version_str
* Change: require 'buildr/scala' is now officially required to use Scala features
* Change: Introduced new options from Rake 0.8.3: -I (libdir), -R (rakelib),
          --rules, --no-search, --silent.
* Change: Upgraded to Rubyforge 1.0.1.
* Change: Upgraded to use Rake 0.8.4.
* Change: Upgraded to use Net-SSH 2.0.11.
* Change: Upgraded to use RSpec 1.2.2.
* Change: Upgraded to use JRuby 1.1.6 (when auto-installing).
* Change: Buildr, no longer in incubation (hurray!): new site, mailing list, SVN, Git.
* Change: BUILDR-171 Eclipse task generates meta-data files for projects with
          test source code but no main source code. 
* Change: BUILDR-177 Moved cobertura and emma extensions to lib directory.
* Change: BUILDR-187 Source code attachment for Eclipse .classpath.